--- a/src/styles/components/_notes.scss
+++ b/src/styles/components/_notes.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 20x;
+    padding: 20px;
 }
 
 .notes__title-input, .notes__textarea{
@@ -43,7 +43,7 @@
     resize: none;
 }
 
-.notes__image{
+.notes__image img{
     box-shadow: 5px 5px $dark-grey;
     height: 150px;
 }
